[gd_scene load_steps=6 format=3 uid="uid://cm4ctan2w3yh"]

[ext_resource type="Texture2D" uid="uid://bjfhuubduxkyk" path="res://Assets/Interfaces_UI/main_menu/backgrounMenu.png" id="1_8kay7"]
[ext_resource type="Script" path="res://Scripts/interface_UI/main_menu.gd" id="1_bulpv"]
[ext_resource type="Texture2D" uid="uid://o431cp6ki4e5" path="res://Assets/Interfaces_UI/buttons/jogar02.png" id="2_f4b50"]
[ext_resource type="FontFile" uid="uid://cl51uuy76fgvs" path="res://Assets/fonte/upheavtt.ttf" id="3_g6fp6"]
[ext_resource type="AudioStream" uid="uid://cju3tmryqsx83" path="res://Audio/sfx/sfx_sword_hit1.wav" id="5_3mxht"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bulpv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 1153.0
offset_bottom = 660.0
texture = ExtResource("1_8kay7")
expand_mode = 1
stretch_mode = 4

[node name="BtPlay" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 771.0
offset_top = 368.0
offset_right = 1027.0
offset_bottom = 496.0
texture_normal = ExtResource("2_f4b50")

[node name="Label" type="Label" parent="CanvasLayer/BtPlay"]
layout_mode = 0
offset_left = 26.0
offset_top = 36.0
offset_right = 240.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("3_g6fp6")
theme_override_font_sizes/font_size = 41
text = "JOGAR 
"
horizontal_alignment = 1

[node name="BtPlayTeste" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 768.0
offset_top = 452.0
offset_right = 1024.0
offset_bottom = 580.0
texture_normal = ExtResource("2_f4b50")

[node name="Label" type="Label" parent="CanvasLayer/BtPlayTeste"]
layout_mode = 0
offset_left = 25.0
offset_top = 36.0
offset_right = 239.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("3_g6fp6")
theme_override_font_sizes/font_size = 33
text = "JOGAR teste
"
horizontal_alignment = 1

[node name="BtPlayquit" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 768.0
offset_top = 534.0
offset_right = 1024.0
offset_bottom = 662.0
texture_normal = ExtResource("2_f4b50")

[node name="Label" type="Label" parent="CanvasLayer/BtPlayquit"]
layout_mode = 0
offset_left = 25.0
offset_top = 36.0
offset_right = 239.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("3_g6fp6")
theme_override_font_sizes/font_size = 33
text = "Sair
"
horizontal_alignment = 1

[node name="LabelTitle" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 364.0
offset_top = 265.0
offset_right = 784.0
offset_bottom = 344.0
theme_override_fonts/font = ExtResource("3_g6fp6")
theme_override_font_sizes/font_size = 41
text = "Fim de jogo
Obrigado por jogar
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="settings" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 645.0
mouse_filter = 2

[node name="sfx_slider" type="HSlider" parent="CanvasLayer/settings"]
layout_mode = 0
offset_left = 564.0
offset_top = 621.0
offset_right = 700.0
offset_bottom = 637.0
value = 100.0

[node name="st_slider" type="HSlider" parent="CanvasLayer/settings"]
layout_mode = 0
offset_left = 381.0
offset_top = 621.0
offset_right = 508.0
offset_bottom = 637.0
value = 100.0

[node name="Label2" type="Label" parent="CanvasLayer/settings"]
layout_mode = 0
offset_left = 341.0
offset_top = 601.0
offset_right = 555.0
offset_bottom = 639.0
theme_override_fonts/font = ExtResource("3_g6fp6")
theme_override_font_sizes/font_size = 20
text = "sound track
"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/settings"]
layout_mode = 0
offset_left = 524.0
offset_top = 599.0
offset_right = 738.0
offset_bottom = 637.0
theme_override_fonts/font = ExtResource("3_g6fp6")
theme_override_font_sizes/font_size = 20
text = "sound effect
"
horizontal_alignment = 1

[node name="sfx_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3mxht")

[connection signal="pressed" from="CanvasLayer/BtPlay" to="." method="_on_bt_play_pressed"]
[connection signal="pressed" from="CanvasLayer/BtPlayTeste" to="." method="_on_bt_play_teste_pressed"]
[connection signal="pressed" from="CanvasLayer/BtPlayquit" to="." method="_on_bt_playquit_pressed"]
[connection signal="value_changed" from="CanvasLayer/settings/sfx_slider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/settings/st_slider" to="." method="_on_st_slider_value_changed"]
